--- a/editor/resources.qrc
+++ b/editor/resources.qrc
@@ -3,5 +3,8 @@
         <file alias="connectOff">images/connectOff.png</file>
         <file alias="connectOn">images/connectOn.png</file>
         <file alias="settings">images/settings.png</file>
+        <file alias="home">images/home.png</file>
+        <file alias="person">images/avatar.png</file>
+        <file alias="group">images/group.png</file>
     </qresource>
 </RCC>
