--- a/editor/connectiondialog.ui
+++ b/editor/connectiondialog.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>480</width>
-    <height>334</height>
+    <height>336</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,18 +18,17 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
-      <widget class="QLabel" name="label">
-       <property name="text">
-        <string>Connection name</string>
-       </property>
-      </widget>
-     </item>
-     <item>
+    <layout class="QGridLayout" name="gridLayout_2">
+     <item row="0" column="1">
       <widget class="QLineEdit" name="connectionNameEdit">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="placeholderText">
-        <string>connection name (optional)</string>
+        <string>connection title (optional)</string>
        </property>
       </widget>
      </item>
@@ -43,6 +42,16 @@
      <property name="bottomMargin">
       <number>0</number>
      </property>
+     <item row="1" column="1" colspan="7">
+      <widget class="QLineEdit" name="baseEdit"/>
+     </item>
+     <item row="2" column="6">
+      <widget class="QLabel" name="versionLabel">
+       <property name="text">
+        <string>Version</string>
+       </property>
+      </widget>
+     </item>
      <item row="1" column="0">
       <widget class="QLabel" name="label_5">
        <property name="text">
@@ -53,7 +62,7 @@
      <item row="4" column="1" colspan="7">
       <widget class="QLineEdit" name="userEdit">
        <property name="placeholderText">
-        <string>username used for connection</string>
+        <string>username for connection</string>
        </property>
       </widget>
      </item>
@@ -101,8 +110,11 @@
      </item>
      <item row="5" column="1" colspan="7">
       <widget class="QLineEdit" name="pwdEdit">
+       <property name="echoMode">
+        <enum>QLineEdit::Password</enum>
+       </property>
        <property name="placeholderText">
-        <string>password used for connection</string>
+        <string>password for connection</string>
        </property>
       </widget>
      </item>
@@ -127,28 +139,8 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="1" colspan="5">
-      <widget class="QLineEdit" name="baseEdit"/>
-     </item>
-     <item row="1" column="6">
-      <widget class="QLabel" name="label_4">
-       <property name="text">
-        <string>Version</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="7">
-      <widget class="QSpinBox" name="versionSpin">
-       <property name="minimum">
-        <number>2</number>
-       </property>
-       <property name="maximum">
-        <number>3</number>
-       </property>
-       <property name="value">
-        <number>3</number>
-       </property>
-      </widget>
+     <item row="0" column="1" colspan="5">
+      <widget class="QLineEdit" name="hostBox"/>
      </item>
      <item row="0" column="7">
       <widget class="QSpinBox" name="portSpin">
@@ -173,8 +165,18 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="1" colspan="5">
-      <widget class="QLineEdit" name="hostBox"/>
+     <item row="2" column="7">
+      <widget class="QSpinBox" name="versionSpin">
+       <property name="minimum">
+        <number>2</number>
+       </property>
+       <property name="maximum">
+        <number>3</number>
+       </property>
+       <property name="value">
+        <number>3</number>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
