-set version 0.4.9 -add 'Show password' check to connection dialog -update show icons at ldap tree

--- a/editor/resources.qrc
+++ b/editor/resources.qrc
@@ -6,5 +6,6 @@
         <file alias="home">images/home.png</file>
         <file alias="person">images/avatar.png</file>
         <file alias="group">images/group.png</file>
+        <file alias="folder">images/folder.png</file>
     </qresource>
 </RCC>
