--- a/editor/connectiondialog.ui
+++ b/editor/connectiondialog.ui
@@ -178,6 +178,13 @@
        </property>
       </widget>
      </item>
+     <item row="6" column="6" colspan="2">
+      <widget class="QCheckBox" name="showPasswordCheck">
+       <property name="text">
+        <string>Show password</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
    <item>
