--- a/editor/resources.qrc
+++ b/editor/resources.qrc
@@ -7,5 +7,6 @@
         <file alias="person">images/avatar.png</file>
         <file alias="group">images/group.png</file>
         <file alias="folder">images/folder.png</file>
+        <file alias="diagram">images/diagram.png</file>
     </qresource>
 </RCC>
