--- a/editor/ldapnewentrydialog.ui
+++ b/editor/ldapnewentrydialog.ui
@@ -30,24 +30,31 @@
     <number>6</number>
    </property>
    <item>
-    <layout class="QGridLayout" name="gridLayout" rowstretch="0,0,0,0,0,0,0" columnstretch="0,0,0,0">
-     <item row="2" column="0" colspan="2">
-      <widget class="QListWidget" name="listAll"/>
-     </item>
-     <item row="4" column="2" colspan="2">
+    <layout class="QGridLayout" name="gridLayout" rowstretch="0,0,0,0,0,0,0,0,0" columnstretch="0,0,0,0,0">
+     <item row="6" column="3" colspan="2">
       <widget class="QPushButton" name="removeButton">
        <property name="text">
         <string>Remove</string>
        </property>
       </widget>
      </item>
-     <item row="0" column="1" colspan="3">
+     <item row="4" column="0" colspan="3">
+      <widget class="QListWidget" name="listAll"/>
+     </item>
+     <item row="0" column="2" colspan="3">
       <widget class="QLineEdit" name="parentdnEdit"/>
      </item>
-     <item row="2" column="3">
+     <item row="4" column="4">
       <widget class="QListWidget" name="listNeeded"/>
      </item>
-     <item row="4" column="0" colspan="2">
+     <item row="1" column="0">
+      <widget class="QLabel" name="label_2">
+       <property name="text">
+        <string>Structural class</string>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="0" colspan="3">
       <widget class="QPushButton" name="addButton">
        <property name="text">
         <string>Add</string>
@@ -61,17 +68,7 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="1" colspan="3">
-      <widget class="QLineEdit" name="rdnEdit"/>
-     </item>
-     <item row="1" column="0">
-      <widget class="QLabel" name="label_2">
-       <property name="text">
-        <string>RDN</string>
-       </property>
-      </widget>
-     </item>
-     <item row="6" column="2" colspan="2">
+     <item row="8" column="3" colspan="2">
       <widget class="QPushButton" name="okButton">
        <property name="text">
         <string>OK</string>
@@ -81,7 +78,7 @@
        </property>
       </widget>
      </item>
-     <item row="6" column="0" colspan="2">
+     <item row="8" column="0" colspan="3">
       <widget class="QPushButton" name="closeButton">
        <property name="text">
         <string>Close</string>
@@ -94,13 +91,25 @@
        </property>
       </widget>
      </item>
+     <item row="1" column="2" colspan="3">
+      <widget class="QComboBox" name="structuralCombo"/>
+     </item>
+     <item row="3" column="2" colspan="3">
+      <widget class="QLineEdit" name="rdnEdit"/>
+     </item>
+     <item row="3" column="0">
+      <widget class="QLabel" name="label_3">
+       <property name="text">
+        <string>RDN</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
   </layout>
  </widget>
  <tabstops>
   <tabstop>parentdnEdit</tabstop>
-  <tabstop>rdnEdit</tabstop>
  </tabstops>
  <resources/>
  <connections/>
