Refactoring for stabilization. Part 3.

--- a/editor/connectiondialog.ui
+++ b/editor/connectiondialog.ui
@@ -224,7 +224,7 @@
         <string>Cancel</string>
        </property>
        <property name="default">
-        <bool>true</bool>
+        <bool>false</bool>
        </property>
       </widget>
      </item>
@@ -235,6 +235,9 @@
        </property>
        <property name="autoDefault">
         <bool>false</bool>
+       </property>
+       <property name="default">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
