--- a/editor/ldapnewattributedialog.ui
+++ b/editor/ldapnewattributedialog.ui
@@ -7,17 +7,17 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>184</height>
+    <height>176</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>New Attribute Dialog</string>
+   <string>New Attribute</string>
   </property>
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>150</y>
+     <y>140</y>
      <width>341</width>
      <height>32</height>
     </rect>
@@ -35,7 +35,7 @@
      <x>0</x>
      <y>0</y>
      <width>401</width>
-     <height>151</height>
+     <height>141</height>
     </rect>
    </property>
    <layout class="QFormLayout" name="formLayout">
