--- a/editor/ldapnewattributedialog.ui
+++ b/editor/ldapnewattributedialog.ui
@@ -105,7 +105,7 @@
     <item row="1" column="1">
      <widget class="QComboBox" name="attrCombo">
       <property name="enabled">
-       <bool>false</bool>
+       <bool>true</bool>
       </property>
       <property name="sizePolicy">
        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -125,7 +125,7 @@
     <item row="2" column="1">
      <widget class="QLineEdit" name="typeEdit">
       <property name="enabled">
-       <bool>false</bool>
+       <bool>true</bool>
       </property>
       <property name="sizePolicy">
        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -148,7 +148,7 @@
     <item row="3" column="1">
      <widget class="QLineEdit" name="valueEdit">
       <property name="enabled">
-       <bool>false</bool>
+       <bool>true</bool>
       </property>
       <property name="sizePolicy">
        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
