--- a/editor/ldapnewattributedialog.ui
+++ b/editor/ldapnewattributedialog.ui
@@ -76,7 +76,7 @@
      <number>6</number>
     </property>
     <item row="0" column="0">
-     <widget class="QLabel" name="label">
+     <widget class="QLabel" name="labelClass">
       <property name="text">
        <string>Class</string>
       </property>
@@ -96,7 +96,7 @@
      </widget>
     </item>
     <item row="1" column="0">
-     <widget class="QLabel" name="label_2">
+     <widget class="QLabel" name="labelAttribute">
       <property name="text">
        <string>Attribute</string>
       </property>
@@ -116,7 +116,7 @@
      </widget>
     </item>
     <item row="2" column="0">
-     <widget class="QLabel" name="label_3">
+     <widget class="QLabel" name="labelType">
       <property name="text">
        <string>Type</string>
       </property>
@@ -139,7 +139,7 @@
      </widget>
     </item>
     <item row="3" column="0">
-     <widget class="QLabel" name="label_4">
+     <widget class="QLabel" name="labelValue">
       <property name="text">
        <string>Value</string>
       </property>
