Auxiliary objectClasses for exising entity cannot be changed #42 - add call CLdapEntry::auxiliaryClasses() for getting right auxiliary classes list - small changes in 'Add/Edit Entry'  dialog

--- a/editor/ldapnewentrydialog.ui
+++ b/editor/ldapnewentrydialog.ui
@@ -30,34 +30,11 @@
     <number>6</number>
    </property>
    <item>
-    <layout class="QGridLayout" name="gridLayout" rowstretch="0,0,0,0,0,0,0,0,0" columnstretch="0,0,0,0,0">
-     <item row="6" column="3" colspan="2">
-      <widget class="QPushButton" name="removeButton">
+    <layout class="QGridLayout" name="gridLayout" rowstretch="0,0,0,0,0,0,0,0,0" columnstretch="0,0,0,0">
+     <item row="3" column="0">
+      <widget class="QLabel" name="label_3">
        <property name="text">
-        <string>Remove</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="0" colspan="3">
-      <widget class="QListWidget" name="listAll"/>
-     </item>
-     <item row="0" column="2" colspan="3">
-      <widget class="QLineEdit" name="parentdnEdit"/>
-     </item>
-     <item row="4" column="4">
-      <widget class="QListWidget" name="listNeeded"/>
-     </item>
-     <item row="1" column="0">
-      <widget class="QLabel" name="label_2">
-       <property name="text">
-        <string>Structural class</string>
-       </property>
-      </widget>
-     </item>
-     <item row="6" column="0" colspan="3">
-      <widget class="QPushButton" name="addButton">
-       <property name="text">
-        <string>Add</string>
+        <string>RDN</string>
        </property>
       </widget>
      </item>
@@ -68,17 +45,7 @@
        </property>
       </widget>
      </item>
-     <item row="8" column="3" colspan="2">
-      <widget class="QPushButton" name="okButton">
-       <property name="text">
-        <string>OK</string>
-       </property>
-       <property name="default">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="8" column="0" colspan="3">
+     <item row="8" column="0" colspan="2">
       <widget class="QPushButton" name="closeButton">
        <property name="text">
         <string>Close</string>
@@ -91,17 +58,86 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="2" colspan="3">
-      <widget class="QComboBox" name="structuralCombo"/>
-     </item>
-     <item row="3" column="2" colspan="3">
+     <item row="3" column="1" colspan="3">
       <widget class="QLineEdit" name="rdnEdit"/>
      </item>
-     <item row="3" column="0">
-      <widget class="QLabel" name="label_3">
+     <item row="8" column="2" colspan="2">
+      <widget class="QPushButton" name="okButton">
        <property name="text">
-        <string>RDN</string>
+        <string>OK</string>
        </property>
+       <property name="default">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="label_2">
+       <property name="text">
+        <string>Structural class</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1" colspan="3">
+      <widget class="QLineEdit" name="parentdnEdit"/>
+     </item>
+     <item row="1" column="1" colspan="3">
+      <widget class="QComboBox" name="structuralCombo"/>
+     </item>
+     <item row="4" column="0" rowspan="2" colspan="4">
+      <widget class="QGroupBox" name="groupBox">
+       <property name="title">
+        <string>Auxiliary classes</string>
+       </property>
+       <layout class="QGridLayout" name="gridLayout_2">
+        <property name="leftMargin">
+         <number>6</number>
+        </property>
+        <property name="topMargin">
+         <number>4</number>
+        </property>
+        <property name="rightMargin">
+         <number>4</number>
+        </property>
+        <property name="bottomMargin">
+         <number>4</number>
+        </property>
+        <property name="horizontalSpacing">
+         <number>4</number>
+        </property>
+        <item row="0" column="0">
+         <widget class="QListWidget" name="listAll"/>
+        </item>
+        <item row="0" column="1">
+         <widget class="QListWidget" name="listNeeded"/>
+        </item>
+        <item row="1" column="0">
+         <widget class="QPushButton" name="addButton">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="text">
+           <string>Add</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QPushButton" name="removeButton">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="text">
+           <string>Remove</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </widget>
      </item>
     </layout>
