--- a/editor/connectiondialog.ui
+++ b/editor/connectiondialog.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>480</width>
-    <height>336</height>
+    <height>370</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,15 +20,12 @@
    <item>
     <layout class="QGridLayout" name="gridLayout_2">
      <item row="0" column="1">
-      <widget class="QLineEdit" name="connectionNameEdit">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
+      <widget class="QComboBox" name="connectionsCombo">
+       <property name="enabled">
+        <bool>true</bool>
        </property>
-       <property name="placeholderText">
-        <string>connection title (optional)</string>
+       <property name="editable">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
@@ -246,7 +243,6 @@
   </layout>
  </widget>
  <tabstops>
-  <tabstop>connectionNameEdit</tabstop>
   <tabstop>hostBox</tabstop>
   <tabstop>baseEdit</tabstop>
   <tabstop>radioSimpleAuth</tabstop>
