update Add User to Group dialog - show user 's names instead of their DNs - add support of multiselections in list (with Ctrl and Shift buttons) - some clean up of code

--- a/editor/addusertogroupdialog.ui
+++ b/editor/addusertogroupdialog.ui
@@ -77,6 +77,9 @@
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
+      <property name="selectionMode">
+       <enum>QAbstractItemView::ExtendedSelection</enum>
+      </property>
      </widget>
     </item>
     <item row="1" column="0">
@@ -93,6 +96,9 @@
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
+      </property>
+      <property name="selectionMode">
+       <enum>QAbstractItemView::ExtendedSelection</enum>
       </property>
      </widget>
     </item>
