Update CLdapNewEntryDialog UI Update DIT disable user icon version 0.5.47

--- a/editor/resources.qrc
+++ b/editor/resources.qrc
@@ -12,5 +12,6 @@
         <file alias="save">images/save.png</file>
         <file alias="search">images/search.png</file>
         <file alias="network">images/wifi.png</file>
+        <file alias="person-disable">images/user-disable.png</file>
     </qresource>
 </RCC>
