Research differences in Qt elements look on different machines #58 - fix look for new/edit entity dialog - fix look for new attribute dialog - fix look of DIT (remove lines to root) version 0.5.52

--- a/editor/ldapnewattributedialog.ui
+++ b/editor/ldapnewattributedialog.ui
@@ -62,6 +62,12 @@
      <height>142</height>
     </rect>
    </property>
+   <property name="minimumSize">
+    <size>
+     <width>0</width>
+     <height>28</height>
+    </size>
+   </property>
    <layout class="QFormLayout" name="formLayout">
     <property name="leftMargin">
      <number>6</number>
@@ -77,6 +83,12 @@
     </property>
     <item row="0" column="0">
      <widget class="QLabel" name="labelClass">
+      <property name="minimumSize">
+       <size>
+        <width>58</width>
+        <height>28</height>
+       </size>
+      </property>
       <property name="text">
        <string>Class</string>
       </property>
@@ -97,6 +109,12 @@
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="labelAttribute">
+      <property name="minimumSize">
+       <size>
+        <width>58</width>
+        <height>28</height>
+       </size>
+      </property>
       <property name="text">
        <string>Attribute</string>
       </property>
@@ -117,6 +135,12 @@
     </item>
     <item row="2" column="0">
      <widget class="QLabel" name="labelType">
+      <property name="minimumSize">
+       <size>
+        <width>58</width>
+        <height>28</height>
+       </size>
+      </property>
       <property name="text">
        <string>Type</string>
       </property>
@@ -140,6 +164,12 @@
     </item>
     <item row="3" column="0">
      <widget class="QLabel" name="labelValue">
+      <property name="minimumSize">
+       <size>
+        <width>58</width>
+        <height>28</height>
+       </size>
+      </property>
       <property name="text">
        <string>Value</string>
       </property>
