--- a/editor/changepassworddialog.ui
+++ b/editor/changepassworddialog.ui
@@ -29,7 +29,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Change user's password dialog</string>
+   <string>Change password</string>
   </property>
   <property name="modal">
    <bool>true</bool>
@@ -56,12 +56,18 @@
      <x>10</x>
      <y>10</y>
      <width>381</width>
-     <height>91</height>
+     <height>96</height>
     </rect>
    </property>
    <layout class="QFormLayout" name="formLayout">
     <item row="0" column="0">
      <widget class="QLabel" name="label">
+      <property name="minimumSize">
+       <size>
+        <width>124</width>
+        <height>0</height>
+       </size>
+      </property>
       <property name="text">
        <string>Password:</string>
       </property>
@@ -69,6 +75,12 @@
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="label_2">
+      <property name="minimumSize">
+       <size>
+        <width>124</width>
+        <height>0</height>
+       </size>
+      </property>
       <property name="text">
        <string>Confirm password:</string>
       </property>
