--- a/editor/connectiondialog.ui
+++ b/editor/connectiondialog.ui
@@ -14,7 +14,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Connection properties dialog</string>
+   <string>Connection properties</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
